Fix inconsistent alignments

--- a/css/main.scss
+++ b/css/main.scss
@@ -49,27 +49,28 @@ html, body {
 #text {
    width:50%;
    float:left;
+   text-align: center;
 }
 #image {
   height: 100%;
   width: 50%;
   float:right;
+  text-align: center;
 }
 
 #img-container {
   height: 100%;
-  margin-left: 20%;
 }
 
 #text-container {
   height: 100%;
-  margin-left: 20%;
   margin-top: 15%;
 }
 
 @media all and (max-width: 800px) {
     #text, #image
     {
+      text-algin: center;
       display: block;
       float: none;
       width: 100%;
@@ -81,6 +82,8 @@ html, body {
       height: 100%;
       margin-left: 0%;
       margin-top: 5%;
+      padding: 2px;
     }
+
 }
 
